# WebScout

./: .gitignore  Cargo.toml  README.md  package.json  turbo.json
admin/: Cargo.toml
admin/app/index/: page.tsx
api/: package.json  worker-configuration.d.ts
api/src/: index.ts  types.ts
api/src/consumers/: crawler.ts  indexer.ts  parser.ts
api/src/handlers/: index.ts  search.ts
api/src/lib/: kv.ts  queue.ts  spider.ts  types.ts
api/src/routes/: crawl.ts  index.ts  parse.ts  project.ts  search.ts
apps/admin/: package.json
apps/admin/app/: globals.css  layout.tsx  page.tsx
apps/admin/src/: App.tsx  index.css  index.tsx
core/: Cargo.toml  README.md  package.json
core/schema/: schema.sql
core/src/: Stemmer.rs  document.rs  index.rs  indexer.rs  kv.rs  lib.rs  main.rs  parser.rs  query.rs  searcher.rs  stemmer.rs  stopwords.rs  tokenizer.rs  utils.rs
core/src/stopwords/: arabic.rs  danish.rs  dutch.rs  english.rs  finnish.rs  french.rs  german.rs  greek.rs  hungarian.rs  italian.rs  portuguese.rs  romanian.rs  russian.rs  spanish.rs  swedish.rs  turkish.rs
core/ts/: webscout.ts
dash/: package.json
dash/app/: layout.tsx  page.tsx
dash/app/auth/: layout.tsx  page.tsx
dash/app/components/: NavBar.tsx  SearchResult.tsx  navbar.tsx
server/: Cargo.toml
server/src/: kv.rs  lib.rs  main.rs
worker/: Cargo.toml
worker/src/: main.rs
workers/WS-Search/: README.md  worker-configuration.d.ts  wrangler.toml
workers/guard/: package.json
workers/search/: package.json
workers/spider/: README.md  package.json
workers/ws-api/: package.json
(+11 files in other folders)
