[package]
name = "server"
authors = ["Yassine AMAGHZAZ <yassine.amaghzaz@outlook.com>"]
description = "Serverless site search built on top of Cloudlfare Workers"
license = "MIT/Apache-2.0"
repository = "https://github.com/AMAGHZAZ-Y/webscout"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde_json = "1.0.97"
sled = "0.34.7"
tokio = {version ="1.28.2", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
webscout-core = {path = "../core"}
