[package]
name = "worker"
version = "0.1.0"
edition = "2021"
authors = ["Yassine AMAGHZAZ <yassine.amaghzaz@outlook.com>"]
description = "Serverless site search built on top of Cloudlfare Workers"
license = "MIT/Apache-2.0"
repository = "https://github.com/AMAGHZAZ-Y/webscout"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
